[package]
name = "mmap_ds"
version = "0.1.0"
authors = ["Peter <PeterRong96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "parent"
path = "src/bin/parent.rs"

[[bin]]
name = "child"
path = "src/bin/child.rs"

[dependencies]

caring = "0.2.0"
failure = "0.1.8"
interprocess-traits = "0.1.1"